# voice

./: .env  .gitignore  .replit  README.md  app.py  documentacao.md  index.html  index_with_interactivity.html  nginx.conf  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  run.py  start_server.bat  ws_server.py
attached_assets/: Pasted-FileNotFoundError-FileNotFoundError-Errno-2-No-such-file-or-directory-home-runner-workspace-b-1743817609478.txt  Pasted-Solu-o-Aprimorada-de-Prospec-o-por-Voz-com-IA-Incluindo-MCP-e-Integra-es-Adicionais-Vou-expandi-1743719708307.txt
backend/: __init__.py  app.py  config.py  main.py  requirements.txt  ws_server.py
backend/api/: __init__.py  auth.py  callbacks.py  conversations.py  leads.py  llm_routes.py
backend/config/: model_routing.py  supabase.py
backend/mcp/: __init__.py
backend/middleware/: auth.py
backend/models/: analytics.py  call.py  campaign.py  campaign_settings.py  db.py  gamification.py  user.py
backend/routes/: campaign.py
backend/schemas/: campaign.py
backend/services/: asterisk_service.py  auth_service.py  campaign_service.py  conductor_service.py  elevenlabs_service.py  free_tts_service.py  integration_service.py  mcp_client.py  openai_service.py  twilio_service.py  voice_analytics_service.py  voicemail_detector.py  voip_service.py  webhook_service.py
backend/utils/: auth.py  logger.py
frontend/: index.html
frontend/css/: main.css  styles.css  unified.css
mcp-server/: client.js  index.js  package.json  whatsapp-client.js
screenshot/: placeholder.html
(+62 files in other folders)
