[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-sqlalchemy>=3.1.1",
    "jwt>=1.3.1",
    "openai>=1.70.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-engineio==4.4.1",
    "python-socketio[client]==5.8.0",
    "requests>=2.32.3",
    "socketio>=0.2.1",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]
